@@ -1,0 +1,3 @@
+# git help shortlog
+# newname <newaddr> oldname <oldaddr>
+<kentnl@cpan.org> <kentfredric@gmail.com>
