@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.0.2 at Tue Feb 22 00:49:00 2011
+; vim: syntax=dosini
 name             = Test-File-ShareDir
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -8,8 +9,7 @@ copyright_holder = Kent Fredric <kentnl@cpan.org>
 ; [Bootstrap::lib]
 
 [@Author::KENTNL]
-:version          = 2.016000
-git_versions      = 1
+:version          = 2.023
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
@@ -17,6 +17,8 @@ toolkit_hardness  = soft
 bumpversions      = 1
 copyfiles         = LICENSE
 srcreadme         = mkdn
+twitter_extra_hash_tags = #testing
+Prereqs::Upgrade.-target_relation = suggests
 
 ;version_major     = 0
 ;version_minor     = 1
@@ -26,7 +28,6 @@ srcreadme         = mkdn
 ;version_rel_day   = 22
 ;version_rel_hour  = 0
 ;version_rel_time_zone = Pacific/Auckland
-twitter_hash_tags = #perl #cpan
 auto_prereqs_skip = ^Example$
 
 [MetaNoIndex]
