@@ -1,6 +1,12 @@
 Release history for Test-File-ShareDir
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000005, see misc/*.deps* for details
+ - configure: +1 (recommends: -1, suggests: +1)
+ - develop: +10 ↑3 -2 (suggests: +1 ↑2)
+ - runtime: (suggests: +1)
+ - test: +1 (recommends: -2, suggests: +2)
 
 1.000005 2014-08-15T23:41:58Z
  [00 Trivial]
